--- a/.github/workflows/ci-post-land.yml
+++ b/.github/workflows/ci-post-land.yml
@@ -4,7 +4,7 @@ on:
   create:
     branches: [main, release-*]
   push:
-    branches: [main, release-*] # gha-test-*
+    branches: [main, release-*, bmwill] # gha-test-*
 
 defaults:
   run:
@@ -171,7 +171,7 @@ jobs:
     env:
       REGISTRY: ghcr.io
       IMAGE_NAME: ${{ github.repository }}_build_environment
-      IMAGE_TAG: ${{ needs.prepare.outputs.changes-target-branch }}
+      IMAGE_TAG: main # ${{ needs.prepare.outputs.changes-target-branch }}
     steps:
       - uses: actions/checkout@v2.3.4
         with:
