--- a/mempool/Cargo.toml
+++ b/mempool/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.38"
 async-trait = "0.1.42"
+bytes = { version = "1.0.1", features = ["serde"] }
 fail = "0.4.0"
 futures = "0.3.12"
 itertools = "0.10.0"
