[network] Replace old MempoolRpc with new Id
Closes: #9640

--- a/testsuite/generate-format/tests/staged/network.yaml
+++ b/testsuite/generate-format/tests/staged/network.yaml
@@ -147,6 +147,8 @@ ProtocolId:
     8:
       StorageServiceRpc: UNIT
     9:
+      InvalidRpc: UNIT
+    10:
       MempoolRpc: UNIT
 ProtocolIdSet:
   NEWTYPESTRUCT: BYTES
