cleaned some unnecessary crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,6 +111,7 @@ members = [
     "language/move-prover/mutation",
     "language/move-prover/test-utils",
     "language/move-prover/tools/spec-flatten",
+    "language/move-prover/tools/mutation",
     "language/move-stdlib",
     "language/move-symbol-pool",
     "language/move-vm/integration-tests",
@@ -224,6 +225,7 @@ default-members = [
     "language/move-prover/lab",
     "language/move-prover/mutation",
     "language/move-prover/tools/spec-flatten",
+    "language/move-prover/tools/mutation",
     "language/move-lang",
     "language/move-stdlib",
     "language/tools/disassembler",
